path to logo changed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <body>
       <!-- Navigation -->
 	  <nav class="navbar-expand-sm navbar-expand-md navbar-expand-lg navbar navbar-light" style="background-color: #fff;">
-  <a class="navbar-brand" href="#HOME"><img src="img/logo.png"></a>
+  <a class="navbar-brand" href="#HOME"><img src="logo.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
