edited all image sources

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
          </ul>
          <div class="carousel-inner">
             <div class="carousel-item active">
-               <img src="img/background.png">
+               <img src="background.png">
                <div class="carousel-caption">
                   <h1 class="display-2">Boostrap</h1>
                   <h3>complet website layout</h3>
@@ -61,10 +61,10 @@
                </div>
             </div>
             <div class="carousel-item">
-               <img src="img/background2.png">
+               <img src="background2.png">
             </div>
             <div class="carousel-item">
-               <img src="img/background3.png">
+               <img src="background3.png">
             </div>
          </div>
       </div>
@@ -134,7 +134,7 @@
                <button class="button4"><span>Hover </span></button>
             </div>
             <div class="col-lg-6">
-               <img src="img/desk.png" class="img-fluid">
+               <img src="desk.png" class="img-fluid">
             </div>
          </div>
       </div>
@@ -180,7 +180,7 @@
          <div class="row padding">
             <div class="col-md-4">
                <div class="card">
-                  <img class="card-img-top" src="img/team1.png">
+                  <img class="card-img-top" src="team1.png">
                   <div class="card-body" >
                      <h1 class="card-title">Jon Doe</h1>
                      <p class="card-text">joe Doe is an internet expert have 20 years of expirence in marketing</p>
@@ -191,7 +191,7 @@
             <!-- end of first card -->
             <div class="col-md-4">
                <div class="card">
-                  <img class="card-img-top"src="img/team2.png">
+                  <img class="card-img-top"src="team2.png">
                   <div class="card-body">
                      <h1 class="card-title">Marry Jo </h1>
                      <p class="body-text"> Merry Jo is an designer she has 10 years of expirence in digital designing</p>
@@ -202,7 +202,7 @@
             <!-- end of  second card -->
             <div class="col-md-4">
                <div class="card">
-                  <img class="card-img-top"src="img/team3.png">
+                  <img class="card-img-top"src="team3.png">
                   <div class="card-body">
                      <h1 class="card-title">Phill Ho </h1>
                      <p class="body-text"> Phill Ho is an developer he has five year of expirence as web developer </p>
@@ -226,7 +226,7 @@
                <p>It can also display the web page diffrentley depending on the screen size or viewing device</p>
             </div>
             <div class="col-lg-6">
-               <img src="img/desk.png" class="img-fluid">
+               <img src="desk.png" class="img-fluid">
             </div>
          </div>
          <hr class="my-4">
@@ -253,7 +253,7 @@
          <div class="container-fluid padding" style="color:#ffffff;background-color:#726459">
             <div class="row text-center">
                <div class="col-md-4">
-                  <img src="img/w3newbie.png">
+                  <img src="w3newbie.png">
                   <hr class="light">
                   <p>Geetanjali Bulding Harinagar</p>
                   <p>Chikodi</p>
