--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
          <div class="container-fluid padding">
             <div class="row text-center">
                <div class="col-sm-6 col-md-3">
-                  <img class="gif" src="img/gif/panda.gif">
+                  <img class="gif" src="panda.gif">
                </div>
                <div class="col-sm-6 col-md-3">
-                  <img class="gif" src="img/gif/poo.gif">
+                  <img class="gif" src="poo.gif">
                </div>
                <div class="col-sm-6 col-md-3">
-                  <img class="gif" src="img/gif/unicorn.gif">
+                  <img class="gif" src="unicorn.gif">
                </div>
                <div class="col-sm-6 col-md-3">
                   <img class="gif" src="img/gif/chicken.gif">
