--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                   <img class="gif" src="unicorn.gif">
                </div>
                <div class="col-sm-6 col-md-3">
-                  <img class="gif" src="img/gif/chicken.gif">
+                  <img class="gif" src="chicken.gif">
                </div>
             </div>
          </div>
